--- a/AbstractBarModel/AbstractBarModel.csproj
+++ b/AbstractBarModel/AbstractBarModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>2aa887bd-e3dd-44dd-8fcc-4f21ad2352e5</ProjectGuid>
+    <ProjectGuid>37113c4e-4a97-441d-a75c-4f1bc193751d</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AbstractBar</RootNamespace>
-    <AssemblyName>AbstractBar</AssemblyName>
+    <RootNamespace>AbstractBarModel</RootNamespace>
+    <AssemblyName>AbstractBarModel</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
