--- a/AbstractGarmentFactoryServiceImplementDataBase/AbstractGarmentFactoryServiceImplementDataBase.csproj
+++ b/AbstractGarmentFactoryServiceImplementDataBase/AbstractGarmentFactoryServiceImplementDataBase.csproj
@@ -77,10 +77,16 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Resources\TIMCYR.TTF" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AbstractGarmentFactoryModel\AbstractGarmentFactoryModel.csproj">
@@ -98,6 +104,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903161212502_SecondMigration.resx">
       <DependentUpon>201903161212502_SecondMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
