--- a/AbstractGarmentFactoryView/AbstractGarmentFactoryView.csproj
+++ b/AbstractGarmentFactoryView/AbstractGarmentFactoryView.csproj
@@ -92,6 +92,12 @@
     <Compile Include="FormCustomer.Designer.cs">
       <DependentUpon>FormCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCustomerIndents.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCustomerIndents.Designer.cs">
+      <DependentUpon>FormCustomerIndents.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormCustomers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,6 +176,9 @@
     <EmbeddedResource Include="FormCustomer.resx">
       <DependentUpon>FormCustomer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormCustomerIndents.resx">
+      <DependentUpon>FormCustomerIndents.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormCustomers.resx">
       <DependentUpon>FormCustomers.cs</DependentUpon>
     </EmbeddedResource>
@@ -210,7 +219,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Report1.rdlc" />
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\AbstractGarmentFactoryServiceDAL.ViewModel.CustomerIndentsModel.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
