--- a/AbstractGarmentFactoryView/App.config
+++ b/AbstractGarmentFactoryView/App.config
@@ -10,6 +10,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  <appSettings>
+    <add key="IPAddress" value="http://localhost:55465/" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
