--- a/AbstractGarmentFactoryRestApi/AbstractGarmentFactoryRestApi.csproj
+++ b/AbstractGarmentFactoryRestApi/AbstractGarmentFactoryRestApi.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\FabricController.cs" />
     <Compile Include="Controllers\MainController.cs" />
+    <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\StorageController.cs" />
     <Compile Include="Controllers\StockingController.cs" />
     <Compile Include="Global.asax.cs">
