--- a/AbstractGarmentFactoryRestApi/Web.config
+++ b/AbstractGarmentFactoryRestApi/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AbstractDBScope" connectionString="Data Source=ВИКА\SQLEXPRESS;Initial Catalog=AbstractDatabase;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="AbstractDatabase" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ВИКА\AbstractDatabase.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
