--- a/AbstractGarmentFactoryServiceDAL/AbstractGarmentFactoryServiceDAL.csproj
+++ b/AbstractGarmentFactoryServiceDAL/AbstractGarmentFactoryServiceDAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BindingModel\CustomerBindingModel.cs" />
     <Compile Include="BindingModel\FabricBindingModel.cs" />
     <Compile Include="BindingModel\FabricStockingBindingModel.cs" />
+    <Compile Include="BindingModel\ImplementerBindingModel.cs" />
     <Compile Include="BindingModel\ReportBindingModel.cs" />
     <Compile Include="BindingModel\StockingBindingModel.cs" />
     <Compile Include="BindingModel\IndentBindingModel.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="BindingModel\StorageStockingBindingModel.cs" />
     <Compile Include="Interfaces\ICustomerService.cs" />
     <Compile Include="Interfaces\IFabricService.cs" />
+    <Compile Include="Interfaces\IImplementerService.cs" />
     <Compile Include="Interfaces\IReportService.cs" />
     <Compile Include="Interfaces\IStockingService.cs" />
     <Compile Include="Interfaces\IMainService.cs" />
@@ -63,6 +65,7 @@
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\FabricStockingViewModel.cs" />
     <Compile Include="ViewModel\FabricViewModel.cs" />
+    <Compile Include="ViewModel\ImplementerViewModel.cs" />
     <Compile Include="ViewModel\StockingViewModel.cs" />
     <Compile Include="ViewModel\IndentViewModel.cs" />
     <Compile Include="ViewModel\StorageLoadViewModel.cs" />
