--- a/AbstractGarmentFactoryRestApi/AbstractGarmentFactoryRestApi.csproj
+++ b/AbstractGarmentFactoryRestApi/AbstractGarmentFactoryRestApi.csproj
@@ -113,6 +113,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\FabricController.cs" />
+    <Compile Include="Controllers\ImplementerController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\StorageController.cs" />
@@ -121,6 +122,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\WorkImplementer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
