--- a/AbstractGarmentFactoryServiceImplementDataBase/AbstractGarmentFactoryServiceImplementDataBase.csproj
+++ b/AbstractGarmentFactoryServiceImplementDataBase/AbstractGarmentFactoryServiceImplementDataBase.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AbstractDBScope.cs" />
     <Compile Include="Implementations\CustomerServiceDB.cs" />
     <Compile Include="Implementations\FabricServiceDB.cs" />
+    <Compile Include="Implementations\ImplementerServiceDB.cs" />
     <Compile Include="Implementations\MainServiceDB.cs" />
     <Compile Include="Implementations\ReportServiceDB.cs" />
     <Compile Include="Implementations\StockingServiceDB.cs" />
@@ -84,7 +85,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Resources\TIMCYR.TTF" />
   </ItemGroup>
