--- a/AbstractGarmentFactoryServiceImplementDataBase/AbstractGarmentFactoryServiceImplementDataBase.csproj
+++ b/AbstractGarmentFactoryServiceImplementDataBase/AbstractGarmentFactoryServiceImplementDataBase.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Migrations\201903161212502_SecondMigration.Designer.cs">
       <DependentUpon>201903161212502_SecondMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904270817369_ThirdMigration.cs" />
+    <Compile Include="Migrations\201904270817369_ThirdMigration.Designer.cs">
+      <DependentUpon>201904270817369_ThirdMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -111,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903161212502_SecondMigration.resx">
       <DependentUpon>201903161212502_SecondMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904270817369_ThirdMigration.resx">
+      <DependentUpon>201904270817369_ThirdMigration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
