--- a/AbstractGarmentFactoryModel/AbstractGarmentFactoryModel.csproj
+++ b/AbstractGarmentFactoryModel/AbstractGarmentFactoryModel.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Fabric.cs" />
     <Compile Include="FabricStocking.cs" />
     <Compile Include="Implementer.cs" />
+    <Compile Include="MessageInfo.cs" />
     <Compile Include="Stocking.cs" />
     <Compile Include="Indent.cs" />
     <Compile Include="IndentCondition.cs" />
