--- a/AbstractGarmentFactoryRestApi/Web.config
+++ b/AbstractGarmentFactoryRestApi/Web.config
@@ -11,7 +11,17 @@
   <connectionStrings>
     <add name="AbstractDatabase" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ВИКА\AbstractDatabase.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="MailLogin" value="fortplab7@gmail.com" />
+    <add key="MailPassword" value="PASSword1234" />
+    <add key="webpages:Version" value="3.0.0.0" />
+
+    <add key="webpages:Enabled" value="false" />
+
+    <add key="ClientValidationEnabled" value="true" />
+
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
