--- a/AbstractGarmentFactoryView/AbstractGarmentFactoryView.csproj
+++ b/AbstractGarmentFactoryView/AbstractGarmentFactoryView.csproj
@@ -142,6 +142,12 @@
     <Compile Include="FormImplementers.Designer.cs">
       <DependentUpon>FormImplementers.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormMails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMails.Designer.cs">
+      <DependentUpon>FormMails.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -184,6 +190,7 @@
     <Compile Include="FormStoragesLoad.Designer.cs">
       <DependentUpon>FormStoragesLoad.cs</DependentUpon>
     </Compile>
+    <Compile Include="MailCustomer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
@@ -213,6 +220,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormImplementers.resx">
       <DependentUpon>FormImplementers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMails.resx">
+      <DependentUpon>FormMails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
