--- a/AbstractGarmentFactoryView/App.config
+++ b/AbstractGarmentFactoryView/App.config
@@ -12,6 +12,8 @@
   </startup>
   <appSettings>
     <add key="IPAddress" value="http://localhost:55465/" />
+    <add key="MailLogin" value="fortplab7@gmail.com" />
+    <add key="MailPassword" value="PASSword1234" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
