--- a/AbstractGarmentFactoryServiceDAL/AbstractGarmentFactoryServiceDAL.csproj
+++ b/AbstractGarmentFactoryServiceDAL/AbstractGarmentFactoryServiceDAL.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributies\CustomInterfaceAttribute.cs" />
+    <Compile Include="Attributies\CustomMethodAttribute.cs" />
     <Compile Include="BindingModel\CustomerBindingModel.cs" />
     <Compile Include="BindingModel\FabricBindingModel.cs" />
     <Compile Include="BindingModel\FabricStockingBindingModel.cs" />
