--- a/AbstractGarmentFactoryMVC/AbstractGarmentFactoryMVC.csproj
+++ b/AbstractGarmentFactoryMVC/AbstractGarmentFactoryMVC.csproj
@@ -247,6 +247,10 @@
       <Project>{d313478b-d385-4243-b9c5-387eb73ca6f6}</Project>
       <Name>AbstractGarmentFactoryServiceDAL</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AbstractGarmentFactoryServiceImplementDataBase\AbstractGarmentFactoryServiceImplementDataBase.csproj">
+      <Project>{69fae82b-5447-4ee6-8959-22dbae242d4a}</Project>
+      <Name>AbstractGarmentFactoryServiceImplementDataBase</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AbstractGarmentFactoryServiceImplement\AbstractGarmentFactoryServiceImplement.csproj">
       <Project>{1c771b32-3715-4769-88b8-5a76025aa4e8}</Project>
       <Name>AbstractGarmentFactoryServiceImplement</Name>
