--- a/AbstractGarmentFactoryServiceImplementDataBase/App.config
+++ b/AbstractGarmentFactoryServiceImplementDataBase/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AbstractDbScope" connectionString="Data Source=ВИКА\SQLEXPRESS;Initial Catalog=AbstractDatabase;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="AbstractDatabase" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ВИКА\AbstractDatabase.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
