--- a/AbstractGarmentFactoryMVC/packages.config
+++ b/AbstractGarmentFactoryMVC/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
+  <package id="MicosoftReportViewerWebForms_v11" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
@@ -16,9 +17,16 @@
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Report.Viewer" version="10.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer" version="11.0.3366.16" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.2015.Runtime" version="12.0.2.2402" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.Runtime.WebForms" version="12.0.2402.15" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="11.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
