--- a/AbstractGarmentFactoryServiceDAL/AbstractGarmentFactoryServiceDAL.csproj
+++ b/AbstractGarmentFactoryServiceDAL/AbstractGarmentFactoryServiceDAL.csproj
@@ -47,21 +47,25 @@
     <Compile Include="BindingModel\CustomerBindingModel.cs" />
     <Compile Include="BindingModel\FabricBindingModel.cs" />
     <Compile Include="BindingModel\FabricStockingBindingModel.cs" />
+    <Compile Include="BindingModel\ReportBindingModel.cs" />
     <Compile Include="BindingModel\StockingBindingModel.cs" />
     <Compile Include="BindingModel\IndentBindingModel.cs" />
     <Compile Include="BindingModel\StorageBindingModel.cs" />
     <Compile Include="BindingModel\StorageStockingBindingModel.cs" />
     <Compile Include="Interfaces\ICustomerService.cs" />
     <Compile Include="Interfaces\IFabricService.cs" />
+    <Compile Include="Interfaces\IReportService.cs" />
     <Compile Include="Interfaces\IStockingService.cs" />
     <Compile Include="Interfaces\IMainService.cs" />
     <Compile Include="Interfaces\IStorageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\CustomerIndentsModel.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\FabricStockingViewModel.cs" />
     <Compile Include="ViewModel\FabricViewModel.cs" />
     <Compile Include="ViewModel\StockingViewModel.cs" />
     <Compile Include="ViewModel\IndentViewModel.cs" />
+    <Compile Include="ViewModel\StorageLoadViewModel.cs" />
     <Compile Include="ViewModel\StorageStockingViewModel.cs" />
     <Compile Include="ViewModel\StorageViewModel.cs" />
   </ItemGroup>
