--- a/AbstractGarmentFactoryMVC/packages.config
+++ b/AbstractGarmentFactoryMVC/packages.config
@@ -17,10 +17,16 @@
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
   <package id="Microsoft.Report.Viewer" version="10.0.0.0" targetFramework="net461" />
   <package id="Microsoft.ReportViewer" version="11.0.3366.16" targetFramework="net461" />
